WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269259
SourceBuffer.h:153:11: error: unknown type name 'Settings'
https://bugs.webkit.org/show_bug.cgi?id=269259
Summary
SourceBuffer.h:153:11: error: unknown type name 'Settings'
Jean-Yves Avenard [:jya]
Reported
2024-02-12 18:21:10 PST
``` In file included from /Users/marcosc/dev/OpenSource/WebKitBuild/Release/DerivedSources/WebCore/unified-sources/UnifiedSource55.cpp:1: In file included from /Users/marcosc/dev/OpenSource/Source/WebCore/Modules/mediasource/SourceBufferList.cpp:38: /Users/marcosc/dev/OpenSource/Source/WebCore/Modules/mediasource/SourceBuffer.h:153:11: error: unknown type name 'Settings' const Settings& settings() const; ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-12 18:21:25 PST
<
rdar://problem/122843557
>
Jean-Yves Avenard [:jya]
Comment 2
2024-02-12 18:23:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24306
EWS
Comment 3
2024-02-12 18:29:43 PST
Committed
274513@main
(fa279f349603): <
https://commits.webkit.org/274513@main
> Reviewed commits have been landed. Closing PR #24306 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug