SourceBuffer.h:153:11: error: unknown type name 'Settings' https://bugs.webkit.org/show_bug.cgi?id=269259 rdar://122843557

Unreviewed build fix.

Add Settings forward declaration.

* Source/WebCore/Modules/mediasource/SourceBuffer.h:

Canonical link: https://commits.webkit.org/274513@main